<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/pref_category_appearance">

        <SwitchPreferenceCompat
            android:key="PREF_NIGHT_MODE"
            android:title="@string/pref_night_mode"/>

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="PREF_SHOW_NOTES_CONTENT"
            android:title="@string/pref_show_notes_content"/>

        <android.support.v7.preference.ListPreference
            android:key="PREF_FONT_SIZE"
            android:entries="@array/font_sizes"
            android:defaultValue="pref_font_size_default"
            android:summary="%s"
            android:entryValues="@array/font_sizes_values"
            android:title="@string/pref_font_size"/>

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/pref_category_security">

        <Preference
            android:key="secure_notes"
            android:title="@string/pref_secure_notes"
            android:summary="@string/pref_secure_notes_summary"/>

        <!--
        <CheckBoxPreference
            android:enabled="false"
            android:title="Unlock with fingerprint"/>
        -->

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/pref_category_backup">

        <Preference
            android:key="export"
            android:title="@string/pref_export"/>

        <Preference
            android:key="import"
            android:title="@string/pref_import"/>

        <!--
        <Preference
            android:key="backup_manager"
            android:title="@string/pref_backup_manager"/>
        -->

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/pref_about_app">

        <Preference
            android:key="rate_app"
            android:title="@string/pref_rate_app"/>

        <Preference
            android:title="@string/pref_version"/>

        <!--
        <Preference
            android:key="backup_manager"
            android:title="@string/pref_backup_manager"/>
        -->

    </android.support.v7.preference.PreferenceCategory>

    <!--
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="show_fab"
        android:title="@string/pref_show_fab"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="enable_counters"
        android:title="@string/pref_enable_counters"/>
    -->


</android.support.v7.preference.PreferenceScreen>