<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        android:title="@string/action_select_all"

        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_pin_note"
        android:icon="@drawable/ic_turned_in_not_white_24dp"
        android:title="@string/action_pin_note"

        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_star_note"
        android:icon="@drawable/ic_star_border_white_24dp"
        android:title="@string/action_star_note"

        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_move_to_trash"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_move_to_trash"

        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_select_notebook"
        android:icon="@drawable/ic_book"
        android:title="@string/title_select_notebook"

        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_check_labels"
        android:icon="@drawable/ic_label_white_24dp"
        android:title="@string/action_labels"

        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>