<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_restore"
        android:icon="@drawable/ic_restore_white_24dp"
        android:title="@string/action_restore"

        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_select_notebook"
        android:icon="@drawable/ic_book_white_24dp"
        android:title="@string/action_notebook"

        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_labels"
        android:icon="@drawable/ic_label_white_24dp"
        android:title="@string/action_labels"

        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/action_share"

        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_move_to_trash"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/action_move_to_trash"

        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        android:title="@string/action_delete"

        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_info"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/action_info"/>

</menu>