<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add_notebook"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/action_add_notebook"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/action_sort_by"
        app:showAsAction="never">

        <menu>

            <group
                android:id="@+id/group_sort"
                android:checkableBehavior="none">

                <item
                    android:id="@+id/menu_sort_title"
                    android:title="@string/action_sort_title"/>

                <item
                    android:id="@+id/menu_sort_custom"
                    android:title="@string/action_sort_custom"/>

            </group>

        </menu>

    </item>

    <item
        android:id="@+id/menu_select"
        android:title="@string/action_select"/>

</menu>