<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        android:title="@string/action_select_all"

        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_pin_note"
        android:icon="@drawable/ic_turned_in_not_white_24dp"
        android:title="@string/action_pin_note"
        android:visible="false"

        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_restore"
        android:icon="@drawable/ic_restore_white_24dp"
        android:title="@string/action_restore"

        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_forever"
        android:title="@string/action_delete"

        app:showAsAction="ifRoom"/>

</menu>