<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_pin_note"
        android:icon="@drawable/ic_bookmark_border_24dp"
        android:title="@string/action_pin_note"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_star_note"
        android:icon="@drawable/ic_star_border_24dp"
        android:title="@string/action_star_note"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_add_reminder"
        android:icon="@drawable/ic_notifications_none_24dp"
        android:title="@string/action_add_reminder"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_restore"
        android:icon="@drawable/ic_restore_24dp"
        android:title="@string/action_restore"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_forever_24dp"
        android:title="@string/action_delete"
        android:visible="false"
        app:showAsAction="ifRoom"/>

</menu>