<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".android.activities.MainActivity">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="1"
        android:title="@string/action_search"
        app:showAsAction="always"/>

    <group
        android:id="@+id/menu_group_notebook"
        android:orderInCategory="4"
        android:visible="false">

        <item
            android:id="@+id/menu_rename_notebook"
            android:title="@string/action_rename"/>

        <item
            android:id="@+id/menu_delete_notebook"
            android:title="@string/action_delete"/>

    </group>

    <group
        android:id="@+id/menu_group_label"
        android:orderInCategory="5"
        android:visible="false">

        <item
            android:id="@+id/menu_rename_label"
            android:title="@string/action_rename"/>

        <item
            android:id="@+id/menu_delete_label"
            android:title="@string/action_delete"/>

    </group>

</menu>
